# spark-proof

./: .gitignore  README.md  pyproject.toml
.hypothesis/constants/: 87c37fac5ef5c9aa  aad7cffc348d6869  bad41d88821162f0  cd8419a2ed0aa4cf  cf6edddb9f0704bb  efb14afa7d76d1a1
.hypothesis/examples/04e6b3400353b141/: 0916570061560fa6  226df1f5b73eb1b1  6615ded705abe322  a781e7f12b0f1f67  ab9dbd2d2428726c  c5a8bccec6ccede3
docs/: pbt_for_data_pipelines.md
docs/superpowers/plans/: 2026-07-17-stage-1-vertical-slice.md
examples/: scalar.py  test_data_frame.py  test_examples.py  test_integer.py
src/spark_proof/: __init__.py  api.py  builders.py  data_frames.py  decorators.py  gen.py  values.py
src/spark_proof/.hypothesis/constants/: da39a3ee5e6b4b0d
src/spark_proof/.hypothesis/examples/04e6b3400353b141/: a6ca9c61f20621ac  c37a8577c3d5c9a4
src/spark_proof/.hypothesis/examples/c37a8577c3d5c9a4/: 2615f341b96e307d  8040737c476f830e  af1210a59bb220bf  (+2 more)
src/spark_proof/_internal/: limits.py  materialisation.py  models.py  runtime.py  types.py  validation.py
src/spark_proof/assertions/: assertions.py
src/spark_proof/core/: __init__.py  capabilities.py  constraints.py  generator.py  limits.py  metadata.py  strategies.py  types.py
src/spark_proof/decorators/: __init__.py  data_frame.py
src/spark_proof/domain/: range.py
tests/: conftest.py  test_data_frame_decorator.py  test_data_frame_spec.py  test_decorators.py  test_gen.py  test_materialisation.py  test_runtime.py  test_values.py
tests/core/: test_constraints.py
tests/decorators/: test_data_frame.py
